package com.florentina.pethotel.customer.enums;

public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
