package com.florentina.pethotel.hotel.enums;

public enum RoomType {
    LUXURY_ROOM_DOGS,
    WEBCAM_ROOM_DOGS,
    GARDEN_ROOM_DOGS,
    STANDARD_ROOM_DOGS,
    STANDARD_ROOM_CATS,
    LUXURY_ROOM_CATS
}
